yaml/mongo/mongo-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mongo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: mongo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo
                port:
                  number: 27017
